--- a/sobre.html
+++ b/sobre.html
@@ -12,12 +12,15 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="projetos.html">Meus Projetos</a></li>
           <li><a href="sobre.html">Sobre mim</a></li>
-        <li><a href="https://www.google.com">Google</a></li>
+          <li><a href="https://www.google.com">Google</a></li>
         </ol>
       </nav>
     </header>
     <main>
       <div>Conteúdo principal do sobre</div>
     </main>
+    <footer>
+      <div>rodapé</div>
+    </footer>
   </body>
 </html>
